--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-<fieldset>
-	<legend>Please enter your username and password</legend>
-	<p>Username: <input type="text" name="username" /></p>
-	<p>Password: <input type="password" name="password" /></p>
-	<input type="submit" />
-</fieldset>
+<h1>Please enter your username and password</h1>
+<form action="" method="post" name="login">
+    <p>Username: {{form.email}} </p>
+	<p>Password: {{form.password}} </p>
+    <p><input type="submit" value="Sign In"></p>
+</form>
 {% endblock %}
