--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1>Please enter your username and password</h1>
 <form action="" method="post" name="login">
-    <p>Username: {{form.email}} </p>
+    <p>Email: {{form.email}} </p>
 	<p>Password: {{form.password}} </p>
     <p><input type="submit" value="Sign In"></p>
 </form>
