--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,24 @@
 {% extends "base.html" %}
+{% set active_page = "login" %}
+
+{% block css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
+{% endblock %}
+
 {% block content %}
 <h1>Please enter your username and password</h1>
 <form action="" method="post" name="login">
-    <p>Email: {{form.email}} </p>
-	<p>Password: {{form.password}} </p>
-    <p><input type="submit" value="Sign In"></p>
+  {{ form.hidden_tag() }}
+  <p>Email: {{ form.email }} </p>
+  {% for error in form.errors.email %}
+    <span style="color: red;">[{{error}}]</span>
+  {% endfor %}<br>
+  <p>Password: {{ form.password }} </p>
+  {% for error in form.errors.password %}
+    <span style="color: red;">[{{error}}]</span>
+  {% endfor %}<br>
+  <p>Remember Me: {{ form.remember_me }}</p>
+  <p><input type="submit" value="Sign In"></p>
 </form>
+
 {% endblock %}
