--- a/templates/register.html
+++ b/templates/register.html
@@ -2,8 +2,16 @@
 {% block content %}
 <h1>Register</h1>
 <form action="" method="post" name="register">
-    <p>Email: {{form.email}} </p>
+  {{ form.hidden_tag() }}
+  <p>Email: {{form.email}} </p>
+  {% for error in form.errors.email %}
+    <span style="color: red;">[{{error}}]</span>
+  {% endfor %}<br>
+
 	<p>Password: {{form.password}} </p>
+  {% for error in form.errors.password %}
+    <span style="color: red;">[{{error}}]</span>
+  {% endfor %}<br>
     <p><input type="submit" value="Register"></p>
 </form>
 {% endblock %}
