--- a/templates/login.html
+++ b/templates/login.html
@@ -6,19 +6,52 @@
 {% endblock %}
 
 {% block content %}
-<h1>Please enter your username and password</h1>
-<form action="" method="post" name="login">
-  {{ form.hidden_tag() }}
-  <p>Email: {{ form.email }} </p>
-  {% for error in form.errors.email %}
-    <span style="color: red;">[{{error}}]</span>
-  {% endfor %}<br>
-  <p>Password: {{ form.password }} </p>
-  {% for error in form.errors.password %}
-    <span style="color: red;">[{{error}}]</span>
-  {% endfor %}<br>
-  <p>Remember Me: {{ form.remember_me }}</p>
-  <p><input type="submit" value="Sign In"></p>
-</form>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-6 col-sm-offset-2 col-md-offset-2 col-lg-offset-3">
+      <div class="login clearfix">
+        <form method="post" name="login" role="form">
+          {{ form.hidden_tag() }}
+          <fieldset>
+            <h2>Please sign in, or <a href="#">Sign Up</a></h2>
+            <hr>
+            <div class="row">
+              <div class="col-xs-6 col-sm-6 col-md-6">
+                <a href="#" class="btn btn-lg btn-primary btn-block">Facebook</a>
+              </div>
+              <div class="col-xs-6 col-sm-6 col-md-6">
+                <a href="#" class="btn btn-lg btn-info btn-block">Google</a>
+              </div>
+            </div>
+            <div class="login-or">
+              <hr class="hr-or">
+              <span class="span-or">OR</span>
+            </div>
+            <div class="form-group">
+              {{ form.email(class_="form-control input-lg", type="email", placeholder="Email Address") }}
+              {% for error in form.errors.email %}
+              <span style="color: red;">[{{error}}]</span>
+              {% endfor %}<br>
+            </div>
+            <div class="form-group">
+              {{ form.password(class_="form-control input-lg", placeholder="Password") }}
+              {% for error in form.errors.password %}
+              <span style="color: red;">[{{error}}]</span>
+              {% endfor %}<br>
+            </div>
+            <div class="checkbox">
+              <label>{{ form.remember_me(class_="pull-left") }}Remember me </label>
+              <a class="pull-right" href="#">Forgot password?</a>
+            </div>
+            <hr>
+            <button type="submit" class="btn btn-lg btn-primary btn-block">
+              Sign In
+            </button>
+          </fieldset>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
