--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,9 @@
+{% macro show_errors(errors) -%}
+    {% for error in errors %}
+    <span style="color: red;">[{{error}}]</span>
+    {% endfor %}<br>
+{%- endmacro %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +11,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}" />
-  <link rel="stylesheet" href="{{ url_for('static', filename='yeti-bootstrap.min.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/yeti-bootstrap.min.css') }}">
   {% block css %}{% endblock %}
 
   <title>{% block title %}{% endblock %}</title>
@@ -75,5 +81,6 @@
       <script src="https://code.jquery.com/jquery.js"></script>
       <!-- Latest compiled and minified JavaScript -->
       <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+      {% block scripts %}{% endblock %}
     </body>
 </html>
