--- a/templates/register.html
+++ b/templates/register.html
@@ -1,17 +1,52 @@
 {% extends "base.html" %}
-{% block content %}
-<h1>Register</h1>
-<form action="" method="post" name="register">
-  {{ form.hidden_tag() }}
-  <p>Email: {{form.email}} </p>
-  {% for error in form.errors.email %}
-    <span style="color: red;">[{{error}}]</span>
-  {% endfor %}<br>
 
-	<p>Password: {{form.password}} </p>
-  {% for error in form.errors.password %}
-    <span style="color: red;">[{{error}}]</span>
-  {% endfor %}<br>
-    <p><input type="submit" value="Register"></p>
-</form>
+{% block css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
+{% endblock %}
+
+{% block content %}
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-6 col-sm-offset-2 col-md-offset-2 col-lg-offset-3">
+      <div class="login clearfix">
+        <form method="post" name="login" role="form">
+          {{ form.hidden_tag() }}
+          <fieldset>
+            <h2>Create a new account</h2>
+            <hr>
+            <div class="row form-group">
+              <div class="col-xs-6">
+              {{ form.first_name(class_="form-control input-lg", placeholder="First Name") }}
+              {{ show_errors(form.errors.first_name) }}
+              </div>
+              <div class="col-xs-6">
+              {{ form.last_name(class_="form-control input-lg", placeholder="Last Name") }}
+              {{ show_errors(form.errors.last_name) }}
+              </div>
+            </div>
+            <div class="form-group">
+              {{ form.email(class_="form-control input-lg", type="email", placeholder="Email Address") }}
+              {{ show_errors(form.errors.email) }}
+            </div>
+            <div class="form-group">
+              {{ form.password(class_="form-control input-lg", placeholder="Password") }}
+              {{ show_errors(form.errors.password) }}
+            </div>
+            <div class="form-group">
+              {{ form.confirm(class_="form-control input-lg", placeholder="Confirm password") }}
+              {{ show_errors(form.errors.confirm) }}
+            </div>
+            <div class="checkbox">
+              <label>{{ form.accept_tos(class_="pull-left") }} I accept the Terms of Service </label>
+            </div>
+            <hr>
+            <button type="submit" class="btn btn-lg btn-primary btn-block">
+              Register
+            </button>
+          </fieldset>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
