Templates for jobs and job details started

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
     <body>
       {% set navigation_bar = [
           ('/', 'home', 'Home'),
-          ('/jobs/', 'jobs', 'Jobs')
+          ('/jobs', 'jobs', 'Jobs')
       ] -%}
       <nav class="navbar navbar-default navbar-static-top" role="navigation">
         <div class="container-fluid">
