couple link changes

--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -33,7 +33,7 @@
         <div class="row">
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-              <a href="details.html"><img src="http://lorempixel.com/300/200/cats/5/" alt="..."></a>
+              <a href="details/1"><img src="http://lorempixel.com/300/200/cats/5/" alt="..."></a>
               <div class="caption">
                 <h3>Organization Name</h3>
                 <p><em>Job title</em></p>
@@ -44,7 +44,7 @@
           </div>
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-              <a href="details.html"><img src="http://lorempixel.com/300/200/cats/1/" alt="..."></a>
+              <a href="details/1"><img src="http://lorempixel.com/300/200/cats/1/" alt="..."></a>
               <div class="caption">
                 <h3>Organization Name</h3>
                 <p><em>Job title</em></p>
@@ -55,7 +55,7 @@
           </div>
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-              <a href="details.html"><img src="http://lorempixel.com/300/200/cats/7/" alt="..."></a>
+              <a href="details/1"><img src="http://lorempixel.com/300/200/cats/7/" alt="..."></a>
               <div class="caption">
                 <h3>Organization Name</h3>
                 <p><em>Job title</em></p>
@@ -68,7 +68,7 @@
           <div class="row">
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-              <a href="details.html"><img src="http://lorempixel.com/300/200/cats/3/" alt="..."></a>
+              <a href="details/1"><img src="http://lorempixel.com/300/200/cats/3/" alt="..."></a>
               <div class="caption">
                 <h3>Organization Name</h3>
                 <p><em>Job title</em></p>
@@ -79,7 +79,7 @@
           </div>
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-              <a href="details.html"><img src="http://lorempixel.com/300/200/cats/4/" alt="..."></a>
+              <a href="details/1"><img src="http://lorempixel.com/300/200/cats/4/" alt="..."></a>
               <div class="caption">
                 <h3>Organization Name</h3>
                 <p><em>Job title</em></p>
